Can't get stupid flex box to work!! >:(

--- a/cs1810final/AllPosts.html
+++ b/cs1810final/AllPosts.html
@@ -33,14 +33,13 @@
                 <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
                 <div id="tagsList">
                     <button id="MarsTagButton" alt="Mars" alt="Space_Exploration">Life on Mars</button>
-                    <button>Astronauts</button>
-                    <button>Galaxies</button>
-                    <button>Neptune and Nebulas</button>
-                    <button>Influential People</button>
+                    <button id="AstronautsTagButton" alt="Astronauts">Astronauts</button>
+                    <button id="GalaxiesTagButton" alt="Galaxies">Galaxies</button>
+                    <button id="InfluentialPeopleTagButton" alt="InfluentialPieces">Influential People</button>
                 </div>
             </div>
             <div id="recentPostsWrapper">
-                <div alt="MarsPost" id="recentPost1Wrapper">
+                <section alt="MarsPost" id="recentPost1Wrapper">
                     <a id="postLink" href="Post1.html">
                         <h1 id="recentPostTitle">Life on Mars</h1>
                         <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just
@@ -50,10 +49,10 @@
                             from deep space ... </p>
                         <p><small>01/15/2032</small></p>
                     </a>
-                </div>
-                <div id="recentPost2Wrapper">
+                </section>
+                <section alt="Astronauts" id="recentPost2Wrapper">
                     <a id="postLink" href="Post1.html">
-                        <h1 id="recentPostTitle">Post 2</h1>
+                        <h1 id="recentPostTitle">Astronauts</h1>
                         <img src="Mariner-4-Mars-Image.png" style="width: 80%;">
                         <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
                             images of Mars. With just 310 Watts
@@ -62,7 +61,7 @@
                             from deep space ... </p>
                         <p><small>01/15/2032</small></p>
                     </a>
-                </div>
+                </section>
             </div>
         </div>
         <footer id="footerWrapper">
