--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -58,7 +58,17 @@ font-family: 'Source Sans Pro', sans-serif; -->
         </div>
         <div class="blogPost" id="recentPost2Wrapper">
             <a id="postLink" href="Post1.html">
-                <h1 id="recentPostTitle">Post 2</h1>
+                <h1 id="recentPostTitle">Astronauts</h1>
+                <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
+                <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
+                    of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
+                    from deep space ... </p>
+                <p><small>01/15/2032</small></p>
+            </a>
+        </div>
+        <div class="blogPost" id="recentPost3Wrapper">
+            <a id="postLink" href="Post1.html">
+                <h1 id="recentPostTitle">Astronauts</h1>
                 <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
                 <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
