--- a/cs1810final/AllPostsTab/AllPosts.html
+++ b/cs1810final/AllPostsTab/AllPosts.html
@@ -19,11 +19,11 @@
 <body>
 
     <nav>
-        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
+        <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
-        <span class="listItem"> <a href="About.html">About</a></span>
+        <span class="listItem"><a href="../GalleryTab\Gallery.html">Gallery</a></span>
+        <span class="listItem"><a href="../Demo.html">Demo</a></span>
+        <span class="listItem"> <a href="../AboutTab\About.html">About</a></span>
     </nav>
 
     <body>
@@ -40,7 +40,7 @@
             </div>
             <div id="recentPostsWrapper">
                 <section alt="MarsPost" id="recentPost1Wrapper">
-                    <a id="postLink" href="Post1.html">
+                    <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
                         <h1 id="recentPostTitle">Life on Mars</h1>
                         <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just
                             310 Watts
@@ -51,9 +51,9 @@
                     </a>
                 </section>
                 <section alt="Astronauts" id="recentPost2Wrapper">
-                    <a id="postLink" href="Post1.html">
+                    <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
                         <h1 id="recentPostTitle">Astronauts</h1>
-                        <img src="Mariner-4-Mars-Image.png" style="width: 80%;">
+                        <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
                         <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
                             images of Mars. With just 310 Watts
                             of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
