--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -30,11 +30,11 @@ font-family: 'Source Sans Pro', sans-serif; -->
 <body>
 
     <nav>
-        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
-        <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
-        <span class="listItem"> <a href="About.html">About</a></span>
+        <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
+        <span class="listItem"><a href="AllPostsTab\AllPosts.html">All Posts</a></span>
+        <span class="listItem"><a href="GalleryTab\Gallery.html">Gallery</a></span>
+        <span class="listItem"><a href="Demo.html">Demo</a></span>
+        <span class="listItem"> <a href="AboutTab\About.html">About</a></span>
     </nav>
 
     <div id="mainPageImage">
@@ -48,8 +48,8 @@ font-family: 'Source Sans Pro', sans-serif; -->
     
     <div id="recentPostsWrapper">
         <div class="blogPost" id="recentPost1Wrapper">
-            <a id="postLink" href="Post1.html">
-                <h1 id="recentPostTitle">Life on Mars</h1>
+            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                <h1 id="recentPostTitle">Life on Mars - Would it be Possible?</h1>
                 <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
@@ -57,9 +57,9 @@ font-family: 'Source Sans Pro', sans-serif; -->
             </a>
         </div>
         <div class="blogPost" id="recentPost2Wrapper">
-            <a id="postLink" href="Post1.html">
+            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
                 <h1 id="recentPostTitle">Astronauts</h1>
-                <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
+                <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
                 <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
@@ -67,12 +67,10 @@ font-family: 'Source Sans Pro', sans-serif; -->
             </a>
         </div>
         <div class="blogPost" id="recentPost3Wrapper">
-            <a id="postLink" href="Post1.html">
-                <h1 id="recentPostTitle">Astronauts</h1>
+            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                <h1 id="recentPostTitle">Top 5 Influential People for Space Exploration</h1>
                 <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
-                <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
-                    of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
-                    from deep space ... </p>
+                <p style="float: inline-end;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum ipsam explicabo! Aliquid, nobis odit  ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
