--- a/cs1810final/AboutTab/About.html
+++ b/cs1810final/AboutTab/About.html
@@ -17,10 +17,10 @@
 
 <body>
     <nav>
-        <span class="listItem" id="logo"><a href="index.html">AstroBlog</a></span>
-        <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
-        <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="Demo.html" target="_blank">Demo</a></span>
+        <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
+        <span class="listItem"><a href="../AllPostsTab\AllPosts.html">All Posts</a></span>
+        <span class="listItem"><a href="../GalleryTab\Gallery.html">Gallery</a></span>
+        <span class="listItem"><a href="../Demo.html">Demo</a></span>
         <span class="listItem"> <a href="About.html">About</a></span>
     </nav>
 
