--- a/cs1810final/AllPostsTab/AllPosts.html
+++ b/cs1810final/AllPostsTab/AllPosts.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <nav>
         <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
@@ -26,52 +25,88 @@
         <span class="listItem"> <a href="../AboutTab\About.html">About</a></span>
     </nav>
 
-    <body>
-        <div class="content">
-            <h1>All Posts</h1>
-            <div id="tagsWrapper">
-                <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
-                <div id="tagsList">
-                    <button id="MarsTagButton" alt="Mars" alt="Space_Exploration">Life on Mars</button>
-                    <button id="AstronautsTagButton" alt="Astronauts">Astronauts</button>
-                    <button id="GalaxiesTagButton" alt="Galaxies">Galaxies</button>
-                    <button id="InfluentialPeopleTagButton" alt="InfluentialPieces">Influential People</button>
-                </div>
-            </div>
-            <div id="recentPostsWrapper">
-                <section alt="MarsPost" id="recentPost1Wrapper">
-                    <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
-                        <h1 id="recentPostTitle">Life on Mars</h1>
-                        <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just
-                            310 Watts
-                            of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
-                            Earth
-                            from deep space ... </p>
-                        <p><small>01/15/2032</small></p>
-                    </a>
-                </section>
-                <section alt="Astronauts" id="recentPost2Wrapper">
-                    <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
-                        <h1 id="recentPostTitle">Astronauts</h1>
-                        <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
-                        <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
-                            images of Mars. With just 310 Watts
-                            of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
-                            Earth
-                            from deep space ... </p>
-                        <p><small>01/15/2032</small></p>
-                    </a>
-                </section>
+
+    <div class="content">
+        <h1>All Posts</h1>
+        <div id="tagsWrapper">
+            <p id="tagsHeader">Tags</p><span><small> find something you like by type:</small> </span>
+            <div id="tagsList">
+                <button id="MarsTagButton" alt="Mars" alt="Space_Exploration">Life on Mars</button>
+                <button id="AstronautsTagButton" alt="Astronauts">Astronauts</button>
+                <button id="GalaxiesTagButton" alt="Galaxies">Galaxies</button>
+                <button id="InfluentialPeopleTagButton" alt="InfluentialPeople">Influential People</button>
             </div>
         </div>
-        <footer id="footerWrapper">
-            <div id="footerTextWrapper">
-                <p>links here lol</p>
-                <p>links here lol</p>
-                <p>links here lol</p>
-            </div>
-        </footer>
-    </body>
+        <div id="postsWrapper">
+            <section alt="MarsPost" >
+                <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                    <h1 id="recentPostTitle">Life on Mars</h1>
+                    <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just
+                        310 Watts
+                        of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
+                        Earth
+                        from deep space ... </p>
+                    <p><small>01/15/2032</small></p>
+                </a>
+            </section>
+            <section alt="Astronauts">
+                <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                    <h1 id="recentPostTitle">Astronauts</h1>
+                    <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
+                    <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
+                        images of Mars. With just 310 Watts
+                        of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
+                        Earth
+                        from deep space ... </p>
+                    <p><small>01/15/2032</small></p>
+                </a>
+            </section>
+            <section alt="Galaxies">
+                <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                    <h1 id="recentPostTitle">Galaxies</h1>
+                    <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
+                    <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
+                        images of Mars. With just 310 Watts
+                        of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
+                        Earth
+                        from deep space ... </p>
+                    <p><small>01/15/2032</small></p>
+                </a>
+            </section>
+            <section alt="InfluentialPeople">
+                <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                    <h1 id="recentPostTitle">People</h1>
+                    <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
+                    <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
+                        images of Mars. With just 310 Watts
+                        of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
+                        Earth
+                        from deep space ... </p>
+                    <p><small>01/15/2032</small></p>
+                </a>
+            </section>
+            <section alt="Galaxies">
+                <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+                    <h1 id="recentPostTitle">Galaxies 2</h1>
+                    <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%;">
+                    <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit
+                        images of Mars. With just 310 Watts
+                        of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to
+                        Earth
+                        from deep space ... </p>
+                    <p><small>01/15/2032</small></p>
+                </a>
+            </section>
+        </div>
+    </div>
+    <footer id="footerWrapper">
+        <div id="footerTextWrapper">
+            <p>links here lol</p>
+            <p>links here lol</p>
+            <p>links here lol</p>
+        </div>
+    </footer>
+
 
 </body>
 
