links somewhat working

--- a/cs1810final/AboutTab/About.html
+++ b/cs1810final/AboutTab/About.html
@@ -20,7 +20,7 @@
         <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="../AllPostsTab\AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="../GalleryTab\Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="../Demo.html">Demo</a></span>
+        <!-- <span class="listItem"><a href="../Demo.html">Demo</a></span> -->
         <span class="listItem"> <a href="About.html">About</a></span>
     </nav>
 
