--- a/cs1810final/GalleryTab/Gallery.html
+++ b/cs1810final/GalleryTab/Gallery.html
@@ -21,7 +21,7 @@
         <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="../AllPostsTab\AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="../Demo.html">Demo</a></span>
+        <!-- <span class="listItem"><a href="../Demo.html">Demo</a></span> -->
         <span class="listItem"> <a href="../AboutTab\About.html">About</a></span>
     </nav>
 </header>
@@ -29,9 +29,9 @@
 <body>
     <h1>Gallery</h1>
     <div id="imageContainer">
-        <a href="index.html"><img id="img1" src="Jupiter-A-Mind-of-Limits.jpg"></a>
-        <img id="img3" src="Images\hubble_arp143.png">
-        <a href="Post1.html" id="img2"><img src="Images\Mariner-4-Mars-Image.png"></a>
+        <a href="../index.html"><img id="img1" src="../Jupiter-A-Mind-of-Limits.jpg"></a>
+        <img id="img3" src="../Images\hubble_arp143.png">
+        <a href="../Posts\LifeOnMarsPost.html" id="img2"><img src="../Images\Mariner-4-Mars-Image.png"></a>
     </div>
 
 </body>
