--- a/cs1810final/index.html
+++ b/cs1810final/index.html
@@ -33,7 +33,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="AllPostsTab\AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="GalleryTab\Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="Demo.html">Demo</a></span>
+        <!-- <span class="listItem"><a href="Demo.html">Demo</a></span> -->
         <span class="listItem"> <a href="AboutTab\About.html">About</a></span>
     </nav>
 
@@ -47,33 +47,35 @@ font-family: 'Source Sans Pro', sans-serif; -->
     <p id="recentPostsHeader">Recent Posts</p>
     
     <div id="recentPostsWrapper">
+
         <div class="blogPost" id="recentPost1Wrapper">
-            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+            <a id="postLink" href="Posts\LifeOnMarsPost.html">
                 <h1 id="recentPostTitle">Life on Mars - Would it be Possible?</h1>
+                <img src="Images\Mariner-4-Mars-Image.png" style="width: 50%; padding-left: 40px;">
                 <p> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
                     of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
                     from deep space ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
+
         <div class="blogPost" id="recentPost2Wrapper">
-            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+            <a id="postLink" href="#">
                 <h1 id="recentPostTitle">Astronauts</h1>
-                <img src="Images\Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
-                <p style="float: inline-end;"> In the Fall of 1964, the Mariner 4 frantically captured it 6-bit images of Mars. With just 310 Watts
-                    of solar power (just enough to power one vaccuum cleaner) the Mariner 4 sent those images to Earth
-                    from deep space ... </p>
+                <p style="float: inline-end;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem laboriosam eligendi voluptatum nulla corrupti dolorem totam amet! Consequuntur fugiat laborum distinctio voluptatem explicabo. Aperiam dolores pariatur facere illum quis? ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
+
         <div class="blogPost" id="recentPost3Wrapper">
-            <a id="postLink" href="Posts\Post1-LifeOnMars\Post1.html">
+            <a id="postLink" href="#">
                 <h1 id="recentPostTitle">Top 5 Influential People for Space Exploration</h1>
                 <img src="Mariner-4-Mars-Image.png" style="width: 80%; padding-left: 30px;">
                 <p style="float: inline-end;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum ipsam explicabo! Aliquid, nobis odit  ... </p>
                 <p><small>01/15/2032</small></p>
             </a>
         </div>
+
     </div>
   
     <hr>
@@ -97,7 +99,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
         <input type="text"><button>enter</button>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -105,7 +107,7 @@ font-family: 'Source Sans Pro', sans-serif; -->
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 </body>
 
 <footer>
