--- a/cs1810final/AllPostsTab/AllPosts.html
+++ b/cs1810final/AllPostsTab/AllPosts.html
@@ -21,7 +21,7 @@
         <span class="listItem" id="logo"><a href="../index.html">AstroBlog</a></span>
         <span class="listItem"><a href="AllPosts.html">All Posts</a></span>
         <span class="listItem"><a href="../GalleryTab\Gallery.html">Gallery</a></span>
-        <span class="listItem"><a href="../Demo.html">Demo</a></span>
+        <!-- <span class="listItem"><a href="../Demo.html">Demo</a></span> -->
         <span class="listItem"> <a href="../AboutTab\About.html">About</a></span>
     </nav>
 
